--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -42,7 +42,7 @@
 
 .hero {
   height: 100vh;
-  background-image: url(/Assets/Images/home-banner.jpg);
+  background-image: url(./Assets/Images/home-banner.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -191,7 +191,7 @@
 }
 /* Part 1 CSS */
 #part1 {
-  background-image: url(/Assets/Images/part1-bg.jpg);
+  background-image: url(./Assets/Images/part1-bg.jpg);
   background-color: #d8eedb;
   background-size: cover;
   
@@ -349,7 +349,7 @@ background: #83d475;
 .footer-dark {
     padding: 50px 0;
     color: #fff;
-    background-image: url(/Assets/Images/footer-bg.jpg);
+    background-image: url(./Assets/Images/footer-bg.jpg);
     background-size: cover;
     background-position: center;
 }
