--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -157,6 +157,11 @@
 .hero button{
     margin-left: 10%;
 }
+#header_banner img{
+  width: 90%;
+  margin-left: 10%;
+  height: 90%;
+}
 }
 .social .fa {
   font-size: 20px;
